# monorepo

./: Cargo.toml  Gemfile  README.md  go.mod  go.sum  package-lock.json  package.json  pom.xml  requirements.txt
.github/: dependency-review.yml
.github/workflows/: dependency-review.yml  main.yml  maven-snapshot.yaml
more/: Cargo.toml  package.json
src/: package-lock.json
src/big/: package-lock.json
